Fix logo in wrong position

--- a/src/containers/preamble/intro/Intro.css
+++ b/src/containers/preamble/intro/Intro.css
@@ -1,5 +1,6 @@
 .intro {
   flex-grow: 1;
+  text-align: center;
 }
 
 .intro__logo {
@@ -17,6 +18,7 @@
 .intro__introduce {
   width: 100%;
 
+  text-align: start;
   font-family: 'SVN-Gilroy-Bold';
   font-size: 36px;
   line-height: 125%;
@@ -55,6 +57,7 @@
 @media only screen and (min-width : 1025px) {
   .intro {
     width: 50%;
+    text-align: start;
   }
 
   .intro__introduce {
